base/bitwarden-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: bitwarden
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
      - image: bitwardenrs/server:latest
        name: bitwarden
        ports:
        - containerPort: 80
          name: bitwarden-web
        volumeMounts:
        - name: bitwarden-storage
          mountPath: /data
      volumes:
      - name: bitwarden-storage
        persistentVolumeClaim:
          claimName: bitwarden-claim
