base/bitwarden-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`vault.anywhere.com`)
    kind: Rule
    services:
    - name: bitwarden
      port: 80
    middlewares:
      - name: bitwarden-headers
